fix: replace Thread.ofVirtual() for Android compatibility
Android JVM (ART) doesn't have Thread.ofVirtual() (Java 21 API).
Replace with regular Thread for the reader loop. Also fix
instanceof pattern matching (Java 16+) that fails on Android.
Add Jdk8Module to ObjectMapper for robust record serialization.